--- a/styles.css
+++ b/styles.css
@@ -15,16 +15,10 @@
   transition: background-color 0.3s ease, box-shadow 0.3s ease;
 }
 #navbar.scrolled {
-  background-color: white;
+  background-color: white !important;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-}
-
-header.scrolled {
-  background: white !important;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04);
   transition: background 0.3s, box-shadow 0.3s;
 }
-
 header .logo a {
   text-decoration: none;
   color: black;
@@ -38,7 +32,7 @@ nav {
 nav a {
   text-decoration: none;
   color: #000;
-  font-size: 18px;
+  font-size: 1.2rem;
   font-weight: 400;
 }
 nav .links {
@@ -48,14 +42,19 @@ nav .links {
 .landing {
   display: flex;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   align-items: center;
 }
 .left {
   width: 50%;
+  min-width: 50%;
   height: 100%;
   display: flex;
   flex-direction: column;
+ }
+.left img {
+  width: 100%;
+  height: 100%;
 }
 .right {
   width: 50%;
@@ -63,9 +62,7 @@ nav .links {
   display: flex;
   flex-direction: column;
   justify-content: center;
-}
-.landing .right {
-  padding-left: 100px;
+  align-items: center;
 }
 .landing .right h1 {
   width: 550px;
@@ -85,7 +82,120 @@ nav .links {
   font-weight: 700;
   cursor: pointer;
 }
-
-@media (max-width: 768px) {
-
+.hamburger {
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  width: 36px;
+  height: 36px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  z-index: 20;
+  margin-left: auto;
+}
+.hamburger span {
+  display: block;
+  height: 4px;
+  width: 100%;
+  background: black;
+  margin: 5px 0;
+  border-radius: 2px;
+  transition: 0.3s;
+}
+.services{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
+  background-color: #F8F9F8;
+}
+.services-container {
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  gap: 20px;
+  padding: 20px;
+  margin-top: 50px;
+  align-items: center;
+  font-size: 1.2rem;
+}
+.service i{
+  font-size: 3rem;
+}
+.service{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  gap: 30px;
+  width: 250px;
+}
+.service p{
+  font-size: 1.2rem;
+  color: #232323;
+  width: 200px;
+  text-align: center;
+}
+.title{
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  font-size: 1.8rem;
+  text-align: center;
+  padding: 20px;
+}
+.divider {
+  width: 20%;
+  align-self: center;
+  height: 1px;
+  border: 1px solid #ccc;
+  margin: 20px 0;
+}
+@media(max-width: 1100px) {
+  .landing {
+    flex-direction: column;
+    height: 100vh;
+  }
+  .left {
+    width: 100%;
+    height: 100vh;
+  }
+  header{
+    z-index: 5;
+  }
+  .right {
+    width: 400px;
+    height: auto;
+    margin: 20px;
+    padding: 20px;
+  }
+  .landing .right h1 {
+    font-size: 5rem;
+  }
+}
+@media(max-width: 770px ) {
+  .hamburger {
+    display: flex;
+  }
+  nav{
+    display: none;
+  }
+  nav .search {
+    display: block
+  }
+}
+@media(max-width: 600px) {
+  .right {
+    width: 400px;
+    height: auto;
+    margin: 20px;
+    padding: 20px;
+  }
+  .landing .right h1 {
+    font-size: 4rem;
+  }
 }
